--- a/style.css
+++ b/style.css
@@ -1,53 +1,88 @@
 body {
-    background-color: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
     height: 100vh;
     margin: 0;
-}
-
-.frame {
-    border: 50px solid black;
-    width: 500px;
-    padding: 50px;
-    background-color: #222;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.canvas {
-    width: 500px;
-    height: 600px;
-    background-color: #3b0c02;
-    overflow: hidden;
-    filter: blur(3px);
+    background-color: #1b1b32;
+    color: #f5f6f7;
+    font-family: Tahoma, sans-serif;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-}
-
-.one {
-    width: 420px;
-    height: 160px;
-    background: linear-gradient(to bottom, #efb762, #d48a3a);
-    box-shadow: 0 0 10px 5px rgba(239, 183, 98, 0.5);
+    justify-content: center;
+  }
+  
+  h1, p {
+    text-align: center;
+  }
+  
+  form {
+    width: 60vw;
+    max-width: 500px;
+    min-width: 300px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
     border-radius: 10px;
-    filter: blur(2px);
-}
-
-.two {
-    width: 460px;
-    height: 200px;
-    background: linear-gradient(to bottom, #8f0401, #6d0201);
-    box-shadow: 0 0 10px 5px rgba(143, 4, 1, 0.5);
-    filter: blur(2px);
-}
-
-.three {
-    width: 90%;
-    height: 28%;
-    background: linear-gradient(to bottom, #b20403, #8a0302);
-    box-shadow: 0 0 12px 6px rgba(178, 4, 3, 0.5);
-    filter: blur(3px);
-}
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  fieldset {
+    border: none;
+    padding: 1.5rem 0;
+    border-bottom: 2px solid #3b3b4f;
+  }
+  
+  fieldset:last-of-type {
+    border-bottom: none;
+  }
+  
+  label {
+    display: block;
+    margin: 0.5rem 0;
+  }
+  
+  input,
+  textarea,
+  select {
+    margin-top: 5px;
+    width: 100%;
+    padding: 8px;
+    background-color: #0a0a23;
+    border: 1px solid #3b3b4f;
+    color: #ffffff;
+    border-radius: 5px;
+  }
+  
+  .inline {
+    width: unset;
+    margin-right: 10px;
+    vertical-align: middle;
+  }
+  
+  input[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-top: 15px;
+    font-size: 1rem;
+    background-color: #3b3b4f;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #57577d;
+  }
+  
+  .terms-link {
+    color: #dfdfe2;
+    text-decoration: none;
+  }
+  
+  .terms-link:hover {
+    text-decoration: underline;
+  }
+  
